# dynamic-cast

./: .gitignore  README.md
dijkstra/: dijkstra-with-minqueue.cpp  dijkstra-with-vectors.cpp  main.cpp  minqueue.cpp  priority.cpp
sfinae/part1/: README.md  main.cpp  template.hpp
sfinae/part2/: README.md  main.cpp  template_print.h  test.cpp  trait_print.h
virtual/: CMakeLists.txt  main.cpp
virtual/include/: creature.hpp
virtual/part1/: README.md
virtual/part1/include/: dragon.hpp  frog.hpp
virtual/part2/: README.md
